feat: added webpack and added Timers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "target": "es6",
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -13,14 +8,36 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
     "moduleResolution": "node",
+    "preserveConstEnums": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react",
+    "outDir": "./dist",
+    "module": "commonjs",
+    "noImplicitAny": true,
+    "removeComments": true,
+    "sourceMap": true,
+    "lib": [
+      "DOM",
+      "ES2021",
+      "ES2022"
+    ],
+    "alwaysStrict": true,
+    "strictNullChecks": true,
+    "stripInternal": true,
+    "noResolve": false,
+    "diagnostics": false,
+    "extendedDiagnostics": false,
+    "declaration": false,
+    "disableSizeLimit": false,
+    "noImplicitThis": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "strictBindCallApply": true,
+    "emitDecoratorMetadata": false,
+    "experimentalDecorators": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
+    "newLine": "lf"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src/**/*"]
 }
