--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "antd": "^5.18.3",
+    "humanize-duration": "^3.32.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -18,7 +19,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "webpack serve",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -42,8 +43,34 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/plugin-syntax-optional-chaining": "^7.8.3",
+    "@babel/plugin-transform-optional-chaining": "^7.22.15",
+    "@babel/plugin-transform-runtime": "^7.22.15",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.6",
     "@types/node-sass": "^4.11.7",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-transform-optional-chaining": "^7.0.0-beta.3",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.8.1",
+    "gh-pages": "3.2.3",
+    "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.6.2",
     "node-sass": "^9.0.0",
-    "sass": "^1.77.6"
+    "sass": "^1.77.6",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
