--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "antd": "^5.18.3",
+    "axios": "^1.7.2",
     "humanize-duration": "^3.32.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
